--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,4 +22,4 @@ jobs:
           
           cml-publish model_results.png --md >> report.md
           
-          cml-send-comment report.md
+          cml comment create report.md
